# stevedore

./: .envrc.example  .envrc.shared  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix
.githooks/: pre-commit  pre-push
.github/rulesets/: main.json
.github/workflows/: ci.yml
crates/stevedore/: Cargo.toml  README.md
crates/stevedore-cli/: Cargo.toml  README.md
crates/stevedore-cli/src/: main.rs
crates/stevedore-mcp/: Cargo.toml  README.md
crates/stevedore-mcp/src/: main.rs
crates/stevedore-secrets/: Cargo.toml  README.md
crates/stevedore-secrets-cli/: Cargo.toml  README.md
crates/stevedore-secrets-cli/src/: main.rs
crates/stevedore-secrets-mcp/: Cargo.toml  README.md
crates/stevedore-secrets-mcp/src/: main.rs
crates/stevedore-secrets/src/: error.rs  lib.rs  secret.rs
crates/stevedore-secrets/src/dashlane/: client.rs  login.rs  note.rs
crates/stevedore-secrets/tests/: dashlane_live.rs
crates/stevedore/src/: dashlane.rs  error.rs  lib.rs  migrate.rs  proton.rs  secret.rs
crates/stevedore/src/dashlane/: client.rs  login.rs  mod.rs  note.rs
crates/stevedore/tests/: dashlane_live.rs
docs/: security.md
docs/adr/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-workspace-layout.md  0003-first-target-and-store-model.md  README.md
docs/dcli/: README.md  personal.md
scripts/: settings.sh
