[package]
name = "stevedore-mcp"
description = "MCP server exposing stevedore's secret-migration tools (scaffold)."
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "stevedore-mcp"
path = "src/main.rs"

# No dependencies yet — the tool surface is deferred (ADR-0003). When it lands,
# this crate takes on `stevedore` (by path), plus `rmcp` + `tokio` for the stdio
# server, mirroring `ferric-fred-mcp`.

[lints]
workspace = true
