[package]
name = "stevedore-secrets-cli"
description = "Command-line interface for stevedore — move secrets between password managers and vaults."
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "stevedore"
path = "src/main.rs"

[dependencies]
stevedore-secrets = { path = "../stevedore-secrets" }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
